# spatial-region-features

./: .gitignore  README.md  pull-results.sh  pyproject.toml  sync.sh  yoke.toml
genomic-dict/: .gitignore  README.md  ai-usability-guidelines.md  config.yaml
genomic-dict/notebook/: scaffold.md
genomic-dict/pipeline/: README.md  migrate_2026_04_29.sh
genomic-dict/pipeline/scripts/: 00_inspect_metadata.py  01_curate_corpus.py  02_prepare_universe.py  03_fetch_bigwigs.py  04_extract_intrinsic.py  04_target_evidence.py  05_extract_sequence.py  05_load_pretrained.py  06_target_evidence.py  06_tokenize_corpus_chr16.py  07_load_pretrained.py  07_precompute_viz.py  08_featured_narrative.py  08_precompute_viz.py  09_featured_signal.py  09_prepare_file_viz.py  10_featured_narrative.py  11_tokenize_corpus_chr16.py  _common.py  (+4 more)
plans/: 2026-04-19-r2v-token-content-comparison.md  2026-04-19-within-ccre-shape-pilot.md  2026-04-22-regulatory-dictionary-viz.md  2026-04-26-observable-framework-migration.md  2026-04-26-region-interpretation-precompute.md  2026-04-26-region-interpretation-step5.md  2026-04-27-corpus-rebase-419k-20k.md  2026-04-27-genomic-regions-handoff.md  2026-04-28-color-encoding-methods.md  2026-04-28-grammar-of-regions-pipeline.md  2026-04-29-bed-route-precompute-strip.md  2026-04-29-react-port.md
retired/bed-embedding-eval/: README.md
retired/old_stage_06_nearest_gene/: 06_extract_extrinsic.py
retired/region-cnn/: README.md
scratch/: README.md
scratch/ccre_examples/: README.md
scratch/chr22_demo/: README.md
scratch/scripts/: fetch_chr22_bigwigs.py
(+27 files in other folders)
